update CATALINA_OPTS