@@ -5,11 +5,11 @@ cd /opt/liferay/tomcat-9.0.17/bin
 # changing the amount of RAM to be used for Java to 75% of available mem
 memory=$( echo "($( free -m | grep '^Mem:' | tr -s ' ' | cut -d ' ' -f 2 ) / 1024 * 0.75 * 1024)/1; scale=0" | bc )
 echo "setting tomcat to ${memory} mb"
-sed -i "s#2560#${memory}#g" /opt/liferay/tomcat-9.0.17/bin/setenv.sh
 
-# adding the correct JAVA path
-echo "" >> /opt/liferay/tomcat-9.0.17/bin/setenv.sh
-echo 'JAVA_HOME="/usr/lib/jvm/java-1.8.0-openjdk"' >> /opt/liferay/tomcat-9.0.17/bin/setenv.sh
+cat <<EOF > /opt/liferay/tomcat-9.0.17/bin/setenv.sh
+CATALINA_OPTS="$CATALINA_OPTS -Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Dorg.apache.catalina.loader.WebappClassLoader.ENABLE_CLEAR_REFERENCES=false -Duser.timezone=GMT -Xms${memory}m -Xmx${memory}m -XX:MaxNewSize=1536m -XX:MaxMetaspaceSize=384m -XX:MetaspaceSize=384m -XX:NewSize=1536m -XX:SurvivorRatio=7 -XX:MaxPermSize=2048m"
+JAVA_HOME="/usr/lib/jvm/java-1.8.0-openjdk"
+EOF
 echo "starting tomcat"
 sh startup.sh
 
